[package]
name = "sea_orm_test_01"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version="1.36.0", features = [ "full" ] }
sea-orm = { version = "^0.12.0", features = [ "sqlx-mysql", "runtime-tokio-rustls", "macros" ] }
uuid ={ version="1.8.0", features = ["v4","fast-rng", "macro-diagnostics"] }
